// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paddingInline renders 0 1`] = `
Array [
  .c0 {
  padding-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInline renders function 1`] = `
Array [
  .c0 {
  padding-inline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: has;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: has;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInline renders invalid theme path 1`] = `
Array [
  .c0 {
  padding-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInline renders negative number 1`] = `
Array [
  .c0 {
  padding-inline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInline renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  padding-inline: July;
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: July;
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInline renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    padding-inline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    padding-inline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-inline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-inline: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInline renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  padding-inline: July;
}

@media May {
  .c0 {
    padding-inline: August;
  }
}

@media April {
  .c0 {
    padding-inline: September;
  }
}

@media January {
  .c0 {
    padding-inline: November;
  }
}

@media April {
  .c0 {
    padding-inline: August;
  }
}

@media June {
  .c0 {
    padding-inline: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: July;
}

@media May {
  .c0 {
    padding-inline: August;
  }
}

@media April {
  .c0 {
    padding-inline: September;
  }
}

@media January {
  .c0 {
    padding-inline: November;
  }
}

@media April {
  .c0 {
    padding-inline: August;
  }
}

@media June {
  .c0 {
    padding-inline: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-inline: November;
  }
}

@media April {
  .c0 {
    padding-inline: January;
  }
}

@media January {
  .c0 {
    padding-inline: December;
  }
}

@media April {
  .c0 {
    padding-inline: April;
  }
}

@media June {
  .c0 {
    padding-inline: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-inline: November;
  }
}

@media April {
  .c0 {
    padding-inline: January;
  }
}

@media January {
  .c0 {
    padding-inline: December;
  }
}

@media April {
  .c0 {
    padding-inline: April;
  }
}

@media June {
  .c0 {
    padding-inline: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInline renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    padding-inline: July;
  }
}

@media April {
  .c0 {
    padding-inline: August;
  }
}

@media January {
  .c0 {
    padding-inline: September;
  }
}

@media April {
  .c0 {
    padding-inline: November;
  }
}

@media June {
  .c0 {
    padding-inline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    padding-inline: July;
  }
}

@media April {
  .c0 {
    padding-inline: August;
  }
}

@media January {
  .c0 {
    padding-inline: September;
  }
}

@media April {
  .c0 {
    padding-inline: November;
  }
}

@media June {
  .c0 {
    padding-inline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-inline: January;
  }
}

@media April {
  .c0 {
    padding-inline: December;
  }
}

@media January {
  .c0 {
    padding-inline: April;
  }
}

@media April {
  .c0 {
    padding-inline: May;
  }
}

@media June {
  .c0 {
    padding-inline: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-inline: January;
  }
}

@media April {
  .c0 {
    padding-inline: December;
  }
}

@media January {
  .c0 {
    padding-inline: April;
  }
}

@media April {
  .c0 {
    padding-inline: May;
  }
}

@media June {
  .c0 {
    padding-inline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInline renders postitive number 1`] = `
Array [
  .c0 {
  padding-inline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInline renders string 1`] = `
Array [
  .c0 {
  padding-inline: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: June;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: June;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingInline renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`paddingInline renders valid theme path 1`] = `
Array [
  .c0 {
  padding-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
